# Kalshi-Mean-Reversion-Bot

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0946e9c41cee_initial_schema_7_tables.py  35c33759bcb8_add_sport_column_to_insights.py  37e71f7b5a29_add_market_context_columns.py  5af3e7d68c1b_add_trade_decision_audit_table.py  91f9f95b5f6d_add_game_score_columns.py  a3f7b4b97b83_add_signal_kind_to_paper_trades.py  b4a18bd69107_add_sport_configs_and_seed_soccer_.py
backend/scripts/: hash_password.py
backend/src/: config.py  main.py  supervisor.py
backend/src/analysis/: accumulators.py  significance.py
backend/src/api/: dependencies.py  serializers.py
backend/src/core/: auth.py  database.py  exceptions.py  logging.py  security.py  types.py
backend/src/ingestion/: espn_events.py  espn_scoreboard.py  kalshi_rest.py  kalshi_ws.py  odds.py
backend/src/models/: __init__.py  analysis.py  config.py  decision.py  game.py  market.py  sport_config.py  trade.py
backend/src/paper_trader/: kelly.py  portfolio.py  simulator.py
backend/src/services/: config_service.py  decision_service.py  heartbeat.py  ingestion_service.py  kalshi_market_service.py  paper_runtime.py  sport_config.py  trade_policy_service.py  trade_reconciliation.py  trade_service.py
backend/src/strategy/: catalog.py  classifier.py  detector.py  market_policy.py  scorer.py
backend/tests/: conftest.py
backend/tests/test_analysis/: test_accumulators.py  test_significance.py
backend/tests/test_api/: test_auth.py  (+6 more)
(+107 files in other folders)
